# pygtkspellcheck

./: .gitignore  .readthedocs.yml  CHANGELOG  DOCUMENTATION  MANIFEST.in  README.md  README.rst  devenv.nix  example.py  pyproject.toml  setup.cfg  setup.py  setup_pylocales.py
.github/workflows/: pipeline.yml
doc/: Makefile  insert_metadata.py  pypi-page.rst
doc/metadata/: documentation.rst  metadata.py  pypi.rst  readme.md  website.md
doc/pypi/: index.html  page.rst
doc/source/: conf.py  index.rst  oxt_extract.rst  oxt_import.rst  pylocales.rst  spellchecker.rst
docs/: index.rst
docs/metadata/: metadata.py
docs/pypi/: page.rst
docs/source/: conf.py  index.md  index.rst
examples/: collapsed_gtk3.py  collapsed_gtk4.py  expanded_gtk3.py  expanded_gtk4.py  large_pygobject.py  large_pygtk.py  simple_pygobject.py  simple_pygtk.py
gtkspellcheck/: gtkspellcheck.py
gtkspellcheck/locale/de/LC_MESSAGES/: gtkspellcheck.mo  gtkspellcheck.po
l10n/: compile_mo.py  extract_strings.sh  msgfmt2.py  msgfmt3.py
l10n/isos/: README.txt
l10n/isos/af/LC_MESSAGES/: iso_3166.mo  iso_639_3.mo
l10n/isos/am/LC_MESSAGES/: iso_3166.mo  iso_639_3.mo
l10n/isos/ar/LC_MESSAGES/: iso_15924.mo  iso_3166.mo  iso_639_3.mo
l10n/isos/as/LC_MESSAGES/: iso_3166.mo
l10n/isos/ast/LC_MESSAGES/: iso_3166.mo
l10n/isos/az/LC_MESSAGES/: iso_3166.mo  iso_3166_2.mo  iso_639_3.mo
l10n/isos/be/LC_MESSAGES/: iso_3166.mo
l10n/isos/bg/LC_MESSAGES/: iso_15924.mo  iso_3166_2.mo  iso_639.mo  iso_639_3.mo
l10n/isos/bn/LC_MESSAGES/: iso_3166.mo
l10n/isos/bn_IN/LC_MESSAGES/: iso_3166.mo
l10n/isos/br/LC_MESSAGES/: iso_15924.mo  iso_3166.mo  iso_639_3.mo
l10n/isos/bs/LC_MESSAGES/: iso_3166_2.mo
l10n/isos/byn/LC_MESSAGES/: iso_3166.mo
l10n/isos/ca/LC_MESSAGES/: iso_3166.mo
l10n/isos/crh/LC_MESSAGES/: iso_3166.mo  iso_3166_2.mo  iso_639_3.mo
l10n/isos/cs/LC_MESSAGES/: iso_15924.mo  iso_3166_2.mo
l10n/isos/cy/LC_MESSAGES/: iso_3166.mo  iso_639_3.mo
l10n/isos/da/LC_MESSAGES/: iso_15924.mo  iso_3166_2.mo  iso_639_3.mo
l10n/isos/de/LC_MESSAGES/: iso_3166.mo
l10n/isos/dz/LC_MESSAGES/: iso_3166.mo
l10n/isos/el/LC_MESSAGES/: iso_3166.mo  iso_3166_2.mo  iso_639_3.mo
l10n/isos/en/LC_MESSAGES/: iso_3166_2.mo
l10n/isos/eo/LC_MESSAGES/: iso_15924.mo  iso_3166.mo
l10n/isos/es/LC_MESSAGES/: iso_15924.mo  iso_3166.mo  iso_3166_2.mo
l10n/isos/et/LC_MESSAGES/: iso_15924.mo
l10n/isos/eu/LC_MESSAGES/: iso_3166.mo  iso_3166_2.mo  iso_639_3.mo
l10n/isos/fa/LC_MESSAGES/: iso_3166.mo  iso_639_3.mo
l10n/isos/fi/LC_MESSAGES/: iso_15924.mo  iso_3166_2.mo  iso_639_3.mo
l10n/isos/fr/LC_MESSAGES/: iso_15924.mo  iso_3166.mo
l10n/isos/ga/LC_MESSAGES/: iso_3166_2.mo  iso_639_3.mo
l10n/isos/gez/LC_MESSAGES/: iso_3166.mo  iso_639_3.mo
l10n/isos/gl/LC_MESSAGES/: iso_3166.mo  iso_639_3.mo
l10n/isos/gu/LC_MESSAGES/: iso_639_3.mo
l10n/isos/haw/LC_MESSAGES/: iso_3166.mo
l10n/isos/he/LC_MESSAGES/: iso_15924.mo  iso_3166.mo  iso_639_3.mo
l10n/isos/hi/LC_MESSAGES/: iso_639_3.mo
l10n/pygtkspellcheck/: de.po  en.mo  en.po  es.mo  es.po
locale/de/: pygtkspellcheck.mo  pygtkspellcheck.po
locale/en/: pygtkspellcheck.mo  pygtkspellcheck.po
locale/es/: pygtkspellcheck.mo  pygtkspellcheck.po
locale/nl/: pygtkspellcheck.mo  pygtkspellcheck.po
placeholders/: README.md
placeholders/gtkspellcheck/: README.md
placeholders/pylocales/: README.md  pyproject.toml
pylocale/: __init__.py  locale.py
pypi/gtkspellcheck/: README.md  pyproject.toml
pypi/gtkspellcheck/gtkspellcheck/: __init__.py
src/: context.py  example.py  gtkspell.py  setup.py
src/gtkspellcheck/: __init__.py  _oxt_extract.py  context.py  gtkspellcheck.py  locales.py  oxt_extract.py  oxt_import.py  spellcheck.py
src/gtkspellcheck/_pylocales/: __init__.py  locales.py
src/pylocale/: locale.py
src/pylocales/: __init__.py  locales.py
utils/: oxt_extract_dictionaries.py
utils/locales/: build.py
(+121 files in other folders)
