[tool.poetry]
name = "pygtkspellcheck"
version = "5.0.0"
description = "A simple but quite powerful spellchecking library for GTK written in pure Python."
authors = [
    "Maximilian Köhl <mail@koehlma.de>"
]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/koehlma/pygtkspellcheck.git"
homepage = "https://github.com/koehlma/pygtkspellcheck"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: X11 Applications :: Gnome',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: MacOS :: MacOS γ',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Localization'
]
packages = [
    { include = "gtkspellcheck", from = "src" },
    { include = "pylocales", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyenchant = "^3.0"
PyGObject = "^3.42.1"
sphinx = { version = "^0.5.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "*"
flake8-bugbear = "*"
pep8-naming = "*"
mypy = "*"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"